Updated Felix framework version to 5.4.0, and Karaf version to 4.0.4, and updated tests.